--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include README.md
 include setup.cfg
-recursive-include lim *.py *.c *.h
+recursive-include limix_inference *.py *.c *.h
 include liknorm_build.py
