--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -4,9 +4,12 @@ channels:
 dependencies:
 - cffi=1.8.3=py27_0
 - enum34=1.1.6=py27_0
+- funcsigs=1.0.2=py27_0
 - libffi=3.2.1=0
 - libgfortran=3.0.0=1
+- llvmlite=0.14.0=py27_0
 - nomkl=1.0=0
+- numba=0.29.0=np111py27_0
 - numpy=1.11.2=py27_nomkl_0
 - openblas=0.2.14=4
 - openssl=1.0.2h=1
@@ -21,6 +24,7 @@ dependencies:
 - ruamel_yaml=0.11.14=py27_0
 - scipy=0.18.1=np111py27_nomkl_0
 - setuptools=23.0.0=py27_0
+- singledispatch=3.4.0.3=py27_0
 - six=1.10.0=py27_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
