--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-_build
-_static
-_templates
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -65,7 +61,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+doc/_build/
 
 # PyBuilder
 target/
