--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -36,6 +36,7 @@ dependencies:
 - six=1.10.0=py27_0
 - snowballstemmer=1.2.1=py27_0
 - sphinx=1.4.8=py27_0
+- sphinx_rtd_theme=0.1.9-py27_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
 - wheel=0.29.0=py27_0
