--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -1,46 +1,45 @@
-name: py27
+name: root
 channels:
 - defaults
 dependencies:
-- alabaster=0.7.9=py27_0
-- babel=2.3.4=py27_0
-- cffi=1.8.3=py27_0
-- docutils=0.12=py27_2
-- enum34=1.1.6=py27_0
-- funcsigs=1.0.2=py27_0
-- imagesize=0.7.1=py27_0
-- jinja2=2.8=py27_1
+- alabaster=0.7.9=py35_0
+- babel=2.3.4=py35_0
+- cffi=1.8.3=py35_0
+- docutils=0.12=py35_2
+- imagesize=0.7.1=py35_0
+- jinja2=2.8=py35_1
 - libffi=3.2.1=0
 - libgfortran=3.0.0=1
-- llvmlite=0.14.0=py27_0
-- markupsafe=0.23=py27_2
+- llvmlite=0.14.0=py35_0
+- markupsafe=0.23=py35_2
 - nomkl=1.0=0
-- numba=0.29.0=np111py27_0
-- numpy=1.11.2=py27_nomkl_0
+- numba=0.29.0=np111py35_0
+- numpy=1.11.2=py35_nomkl_0
 - openblas=0.2.14=4
 - openssl=1.0.2h=1
-- pip=8.1.2=py27_0
-- pycosat=0.6.1=py27_1
-- pycparser=2.17=py27_0
-- pycrypto=2.6.1=py27_4
-- pygments=2.1.3=py27_0
-- python=2.7.12=1
-- pytz=2016.7=py27_0
-- pyyaml=3.11=py27_4
+- pip=9.0.1=py35_0
+- pycosat=0.6.1=py35_1
+- pycparser=2.17=py35_0
+- pycrypto=2.6.1=py35_4
+- pygments=2.1.3=py35_0
+- python=3.5.2=0
+- pytz=2016.7=py35_0
+- pyyaml=3.11=py35_4
 - readline=6.2=2
-- requests=2.10.0=py27_0
-- ruamel_yaml=0.11.14=py27_0
-- scipy=0.18.1=np111py27_nomkl_0
-- setuptools=23.0.0=py27_0
-- singledispatch=3.4.0.3=py27_0
-- six=1.10.0=py27_0
-- snowballstemmer=1.2.1=py27_0
-- sphinx=1.4.8=py27_0
-- sphinx_rtd_theme=0.1.9-py27_0
+- requests=2.10.0=py35_0
+- ruamel_yaml=0.11.14=py35_0
+- scipy=0.18.1=np111py35_nomkl_0
+- setuptools=23.0.0=py35_0
+- six=1.10.0=py35_0
+- snowballstemmer=1.2.1=py35_0
+- sphinx=1.4.8=py35_0
+- sphinx_rtd_theme=0.1.9=py35_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
-- wheel=0.29.0=py27_0
+- wheel=0.29.0=py35_0
+- xz=5.2.2=0
 - yaml=0.1.6=0
 - zlib=1.2.8=3
 - pip:
+  - sphinx-rtd-theme==0.1.9
   - sphinxcontrib-programoutput==0.8
