--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 sudo: required
 dist: trusty
+before_install:
+  - sudo add-apt-repository -y 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.8 main' || true
+  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - || true
+  - sudo apt-get update -y || true
+  - sudo apt-get install -qq -y clang-3.8 zlib1g-dev libbz2-dev || true
 addons:
   apt:
     packages:
@@ -11,24 +16,23 @@ cache:
 matrix:
   include:
   - os: linux
+    compiler: clang-3.8
+    install: export CXX="clang++-3.8"
     python: '2.7'
   - os: linux
+    compiler: clang-3.8
+    install: export CXX="clang++-3.8"
     python: '3.4'
   - os: linux
+    compiler: clang-3.8
+    install: export CXX="clang++-3.8"
     python: '3.5'
-before_script:
-  - sudo add-apt-repository -y 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.8 main' || true
-  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - || true
-  - sudo apt-get install -qq -y clang-3.8 zlib1g-dev libbz2-dev || true
+script:
   - if [ "${TRAVIS_PYTHON_VERSION}" == "2.7" ]; then pip install enum34; fi
-  - sudo apt-get update -y || true
-  - export CXX="clang++-3.8"
   - git clone https://github.com/numba/llvmlite.git --depth 1
   - pushd llvmlite
   - python setup.py install
   - popd
-script:
-  - export CXX="clang++-3.8"
   - python setup.py sdist
   - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`
   - pushd /
