--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,11 @@ script:
 - python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
 - export PATH=~/bin:$PATH
 - "~/bin/pandoc -v"
+- wget https://github.com/glimix/liknorm/archive/v1.2.0.tar.gz
+- tar xzf v1.2.0.tar.gz && mkdir liknorm-1.2.0/build
+- pushd liknorm-1.2.0/build
+- cmake .. && make && make install
+- popd && rm -rf liknorm-1.2.0/ && rm v1.2.0.tar.gz
 - python setup.py sdist
 - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`
 - pushd /
