--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ script:
 - python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
 - export PATH=~/bin:$PATH
 - python setup.py sdist
-# - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -q
+- pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`
 # - pushd /
 # - python -c "import limix_inference; limix_inference.test()"
 # - popd
