--- a/.travis.yml
+++ b/.travis.yml
@@ -35,13 +35,12 @@ install:
 - git clone https://github.com/numba/llvmlite.git --depth 1
 - pushd llvmlite
 - LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" CXX_FLTO_FLAGS= LD_FLTO_FLAGS= python setup.py install
+- LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" pip install numpy-sugar
 script:
 - pip install pypandoc -q
 - python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
 - export PATH=~/bin:$PATH
 - python setup.py sdist
-- which python
-- which pip
 - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`
 # - pushd /
 # - python -c "import limix_inference; limix_inference.test()"
