--- a/.travis.yml
+++ b/.travis.yml
@@ -32,16 +32,17 @@ install:
 - cmake -DCMAKE_INSTALL_PREFIX=$HOME/liknorm .. && make && make install
 - popd && rm -rf liknorm-1.2.0/ && rm v1.2.0.tar.gz
 - if [ "${TRAVIS_PYTHON_VERSION}" == "2.7" ]; then pip install enum34; fi
-- git clone https://github.com/numba/llvmlite.git --depth 1
-- pushd llvmlite
-- LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" CXX_FLTO_FLAGS= LD_FLTO_FLAGS= python setup.py install
+# - git clone https://github.com/numba/llvmlite.git --depth 1
+# - pushd llvmlite
+# - LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" CXX_FLTO_FLAGS= LD_FLTO_FLAGS= python setup.py install
+- LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" CXX_FLTO_FLAGS= LD_FLTO_FLAGS= pip install llvmlite
 - LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" pip install numpy-sugar
 script:
 - pip install pypandoc -q
 - python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
 - export PATH=~/bin:$PATH
 - python setup.py sdist
-- pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`
+- pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -vvv
 # - pushd /
 # - python -c "import limix_inference; limix_inference.test()"
 # - popd
