--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 include LICENSE
 include README.md
 include setup.cfg
-recursive-include limix_inference *.py *.c *.h
-include liknorm_build.py
+recursive-include limix_inference *.py
