--- a/.travis.yml
+++ b/.travis.yml
@@ -17,18 +17,17 @@ install:
 - wget https://github.com/glimix/liknorm/archive/v1.2.0.tar.gz
 - tar xzf v1.2.0.tar.gz && mkdir liknorm-1.2.0/build
 - pushd liknorm-1.2.0/build
-- export LDFLAGS="$(python-config --ldflags) -L$(python-config --prefix)/lib"
-- export CFLAGS="$(python-config --cflags)"
+- export LDFLAGS="-L$(python-config --prefix)/lib"
 - cmake -DCMAKE_INSTALL_PREFIX=`python-config --prefix` .. && make && sudo make install
 - popd && rm -rf liknorm-1.2.0/ && rm v1.2.0.tar.gz
 script:
 - pip install pypandoc -q
-- python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
-- export PATH=~/bin:$PATH
-- export LDFLAGS="$(python-config --ldflags) -L$(python-config --prefix)/lib"
-- export CFLAGS="$(python-config --cflags)"
-- python setup.py sdist
-- pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -vvv
+# - python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
+# - export PATH=~/bin:$PATH
+# - export LDFLAGS="$(python-config --ldflags) -L$(python-config --prefix)/lib"
+# - export CFLAGS="$(python-config --cflags)"
+# - python setup.py sdist
+# - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -vvv
 # - pushd /
 # - python -c "import limix_inference; limix_inference.test()"
 # - popd
