--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,13 @@ install:
 - popd && rm -rf liknorm-1.2.0/ && rm v1.2.0.tar.gz
 script:
 - pip install pypandoc -q
-# - python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
-# - export PATH=~/bin:$PATH
-# - export LDFLAGS="$(python-config --ldflags) -L$(python-config --prefix)/lib"
-# - export CFLAGS="$(python-config --cflags)"
-# - python setup.py sdist
+- python -c "from pypandoc import download_pandoc as dp; dp(targetfolder='~/bin/');"
+- export PATH=~/bin:$PATH
+- export LDFLAGS="-L$(python-config --prefix)/lib"
+- export CFLAGS="$(python-config --cflags)"
+- echo $LDFLAGS
+- echo $CFLAGS
+- python setup.py sdist
 # - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -vvv
 # - pushd /
 # - python -c "import limix_inference; limix_inference.test()"
