--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ script:
 - echo $CFLAGS
 - python setup.py sdist
 - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -vvv
-# - pushd /
-# - python -c "import limix_inference; limix_inference.test()"
+- pushd /
+- python -c "import limix_inference; limix_inference.test()"
 # - popd
 # notifications:
 #   email: false
