--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,12 @@ before_install:
       travis/install_llvmlite.sh;
     fi
   - travis/install_pandoc.sh
+  - git clone https://github.com/glimix/liknorm
+  - cd liknorm
+  - mkdir build
+  - cd build
+  - cmake .. && make && make test && make install
+  - cd .. && cd ..
 script:
   - python setup.py sdist
   - >
