--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - cd liknorm
   - mkdir build
   - cd build
-  - cmake .. && make && make test && make install
+  - cmake .. && make && make test && sudo make install
   - cd .. && cd ..
 script:
   - python setup.py sdist
