--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,8 @@ before_install:
       travis/install_llvmlite.sh;
     fi
   - travis/install_pandoc.sh
-  - git clone https://github.com/glimix/liknorm
-  - cd liknorm
-  - mkdir build
-  - cd build
-  - cmake .. && make && make test && sudo make install
-  - cd .. && cd ..
+before_script:
+  - travis/install_liknorm.sh
 script:
   - python setup.py sdist
   - >
