--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -1,7 +1,7 @@
 name: root
 channels:
 - defaults
-- horta
+- conda-forge
 dependencies:
 - alabaster=0.7.9=py35_0
 - babel=2.3.4=py35_0
@@ -39,3 +39,4 @@ dependencies:
 - xz=5.2.2=0
 - yaml=0.1.6=0
 - zlib=1.2.8=3
+- liknorm=1.2.3=0
