--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
       travis/install_clang38.sh;
       travis/install_llvmlite.sh;
     fi
-  - travis/install_pandoc.sh
+  - travis_retry travis/install_pandoc.sh
   - travis/install_liknorm.sh
 script:
   - python setup.py sdist
