--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -15,7 +15,7 @@ dependencies:
 - markupsafe=0.23=py35_2
 - nomkl=1.0=0
 - numba=0.29.0=np111py35_0
-- numpy=1.11.2=py35_nomkl_0
+- numpy=1.12.0=py35_0
 - openblas=0.2.14=4
 - openssl=1.0.2h=1
 - pip=9.0.1=py35_0
@@ -29,7 +29,7 @@ dependencies:
 - readline=6.2=2
 - requests=2.10.0=py35_0
 - ruamel_yaml=0.11.14=py35_0
-- scipy=0.18.1=np111py35_nomkl_0
+- scipy=0.19.0=np112py35_0
 - setuptools=23.0.0=py35_0
 - six=1.10.0=py35_0
 - snowballstemmer=1.2.1=py35_0
