--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -6,6 +6,7 @@ dependencies:
 - cachetools=2.0.0=py35_0
 - cffi=1.7.0=py35_0
 - libffi=3.2.1=3
+- liknorm=1.2.3=0
 - ncephes=1.0.18=py35_3
 - numpy-sugar=1.0.24=py35_2
 - pycparser=2.17=py35_0
