--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,6 @@ git:
 matrix:
   include:
   - python: 2.7
-    env: NUMBA="false" "PATH=~/bin:$PATH"
-  - python: 3.5
-    env: NUMBA="false" "PATH=~/bin:$PATH"
-  - python: 3.6
-    env: NUMBA="false" "PATH=~/bin:$PATH"
-  - python: 2.7
     compiler: clang-3.8
     env: NUMBA="true" LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" "PATH=~/bin:$PATH"
   - python: 3.5
@@ -21,21 +15,13 @@ matrix:
     compiler: clang-3.8
     env: NUMBA="true" LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8" "PATH=~/bin:$PATH"
 before_install:
-  - >
-    if [ "${NUMBA}" == "true" ]; then
-      travis/install_clang38.sh;
-      travis/install_llvmlite.sh;
-    fi
+  - travis_retry travis/install_clang38.sh;
+  - travis_retry travis/install_llvmlite.sh;
   - travis_retry travis/install_pandoc.sh
-  - travis/install_liknorm.sh
+  - travis_retry travis/install_liknorm.sh
 script:
   - python setup.py sdist
-  - >
-    if [ "${NUMBA}" == "true" ]; then
-      pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`[numba] -vvv;
-    else
-      pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1` -vvv;
-    fi
+  - pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`[numba] -vvv;
   - pushd /
   - python -c "import sys; import limix_inference; sys.exit(limix_inference.test())"
   - popd
