--- a/.travis.yml
+++ b/.travis.yml
@@ -17,17 +17,47 @@ matrix:
     compiler: clang-3.8
     env: NUMBA="true" LLVM_VERSION="3.8" CXX="clang++-3.8" LLVM_CONFIG="llvm-config-3.8"
       "PATH=~/bin:$PATH"
+  - sudo: required
+    services:
+    - docker
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64 NUMBA="true"
+  - os: osx
+    osx_image: xcode7.3
+    language: generic
+    sudo: required
+    env: PYENV=py27
+  - os: osx
+    osx_image: xcode8.3
+    language: generic
+    sudo: required
+    env: PYENV=py27
+  - os: osx
+    osx_image: xcode7.3
+    language: generic
+    sudo: required
+    env: PYENV=py35
+  - os: osx
+    osx_image: xcode8.3
+    language: generic
+    sudo: required
+    env: PYENV=py35
+  - os: osx
+    osx_image: xcode7.3
+    language: generic
+    sudo: required
+    env: PYENV=py36
+  - os: osx
+    osx_image: xcode8.3
+    language: generic
+    sudo: required
+    env: PYENV=py36
 before_install:
-- travis_retry travis/install_clang38.sh;
-- travis_retry travis/install_llvmlite.sh;
-- travis_retry travis/install_pandoc.sh
-- travis_retry travis/install_liknorm.sh
+- travis_retry bash <(curl -s https://raw.githubusercontent.com/limix/travis-tools/master/get-travis-tools.sh)
+- travis_retry travis/before-install.sh
 script:
-- python setup.py sdist
-- pip install dist/`ls dist | grep -i -E '\.(gz)$' | head -1`[numba] -vvv;
-- pushd /
-- python -c "import sys; import glimix_core; sys.exit(glimix_core.test())"
-- popd
+- travis_retry travis/script.sh
+after_success:
+- travis_retry travis/after-success.sh
 notifications:
   email: false
 deploy:
