--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,6 @@
 test = pytest
 
 [tool:pytest]
-addopts = --doctest-modules -x
+addopts = --doctest-modules -x --pep8
+norecursedirs = doc .eggs
+pep8ignore = E402 E501
