--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,30 @@
-[aliases]
-test = pytest
+[metadata]
+name = glimix-core
+author = Danilo Horta
+author-email = horta@ebi.ac.uk
+summary = Fast inference for Generalized Linear Mixed Models
+description-file = README.md
+home-page = https://github.com/limix/glimix-core
+license = MIT
+classifier =
+    Development Status :: 5 - Production/Stable
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python
+keywords =
+    lmm
+    glmm
+    gwas
 
-[tool:pytest]
-addopts = --doctest-modules -x --pep8
-norecursedirs = doc .eggs
-pep8ignore = E402 E501
+[files]
+packages =
+    glimix_core
+
+[build_sphinx]
+all-files = 1
+build-dir = doc/build
+source-dir = doc/source
+warning-is-error = 1
+
+[aliases]
+test=pytest
