ignoring setup.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-addopts = -x --pep8
+addopts = -x --pep8 --doctest-modules
 norecursedirs = doc .eggs
 pep8ignore = E402 E501
+testpaths = glimix_core
