--- a/setup.cfg
+++ b/setup.cfg
@@ -26,5 +26,10 @@ build-dir = doc/build
 source-dir = doc/source
 warning-is-error = 1
 
+[pbr]
+autodoc_tree_index_modules = True
+autodoc_tree_excludes =
+   setup.py
+
 [aliases]
 test=pytest
