--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,12 @@
 [metadata]
-name = glimix-core
-author = Danilo Horta
-author-email = horta@ebi.ac.uk
-summary = Fast inference for Generalized Linear Mixed Models
-description-file = README.md
-home-page = https://github.com/limix/glimix-core
+maintainer = Danilo Horta
+maintainer_email = horta@ebi.ac.uk
+description = Fast inference for Generalized Linear Mixed Models
+description_file = README.rst
+setup_requires = pytest-runner
+url = https://github.com/limix/glimix-core
 license = MIT
+platforms = ['any']
 classifier =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: MIT License
@@ -15,21 +16,13 @@ keywords =
     lmm
     glmm
     gwas
-
-[files]
-packages =
-    glimix_core
-
-[build_sphinx]
-all-files = 1
-build-dir = doc/build
-source-dir = doc/source
-warning-is-error = 1
-
-[pbr]
-autodoc_tree_index_modules = True
-autodoc_tree_excludes =
-   setup.py
+include_package_data = True
+zip_safe = True
 
 [aliases]
 test=pytest
+
+[tool:pytest]
+addopts = -x --pep8 --doctest-modules
+norecursedirs = doc .eggs
+pep8ignore = E402 E501
