--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-scipy>=0.18
-ncephes>=1.0.40
-numpy>=1.10
-numpy-sugar>=1.0.47
-scipy-sugar>=1.0.2
-optimix>=1.2.14
-cachetools>=2.0
-tqdm>=4
-liknorm-py>=1.0.6
+scipy
+ncephes
+numpy
+numpy-sugar
+scipy-sugar
+optimix
+cachetools
+tqdm
+liknorm-py
 ndarray-listener
 brent-search
