--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ setup_requires = pytest-runner
 url = https://github.com/limix/glimix-core
 license = MIT
 platforms = ['any']
-classifier =
+classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
