glmm interface in order

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 maintainer = Danilo Horta
 maintainer_email = horta@ebi.ac.uk
-description = Fast inference for Generalized Linear Mixed Models
+description = Fast inference for Generalised Linear Mixed Models
 description_file = README.rst
 setup_requires = pytest-runner
 url = https://github.com/limix/glimix-core
