before LMM set scale

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,6 @@ zip_safe = True
 test=pytest
 
 [tool:pytest]
-addopts = -x --pep8 --doctest-modules
-norecursedirs = doc .eggs
+addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
+norecursedirs = .eggs
 pep8ignore = E402 E501
