--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,5 @@ test=pytest
 
 [tool:pytest]
 addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
-norecursedirs = .eggs
+norecursedirs = .eggs .git *.egg-info
 pep8ignore = E402 E501
