--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -1,30 +1,52 @@
-name: py35
 channels:
 - conda-forge
 - defaults
 dependencies:
-- cachetools=2.0.0=py35_0
-- cffi=1.7.0=py35_0
-- libffi=3.2.1=3
-- liknorm=1.2.3=0
-- numpy-sugar=1.0.24=py35_2
-- pycparser=2.17=py35_0
-- scipy-sugar=1.0.1=py35_0
-- tqdm=4.11.2=py35_0
-- llvmlite=0.16.0=py35_0
-- mkl=2017.0.1=0
-- numba=0.31.0=np112py35_0
-- numpy=1.12.0=py35_0
-- openssl=1.0.2k=1
-- pip=9.0.1=py35_1
-- python=3.5.3=1
-- readline=6.2=2
-- scipy=0.19.0=np112py35_0
-- setuptools=27.2.0=py35_0
-- sqlite=3.13.0=0
-- tk=8.5.18=0
-- wheel=0.29.0=py35_0
-- xz=5.2.2=1
-- zlib=1.2.8=3
+- hcephes=0.2.3=1
+- liknorm=1.3.11=0
+- ca-certificates=2017.08.26=h1d4fec5_0
+- certifi=2017.7.27.1=py35h19f42a1_0
+- intel-openmp=2018.0.0=h15fc484_7
+- libedit=3.1=heed3624_0
+- libffi=3.2.1=h4deb6c0_3
+- libgcc-ng=7.2.0=hcbc56d2_1
+- libgfortran-ng=7.2.0=h6fcbd8e_1
+- libstdcxx-ng=7.2.0=h24385c6_1
+- mkl=2018.0.0=hb491cac_4
+- ncurses=6.0=h06874d7_1
+- numpy=1.13.1=py35h8926d81_2
+- openssl=1.0.2l=h9d1a558_3
+- pandas=0.20.3=py35h85c2c75_2
+- pip=9.0.1=py35haa8ec2a_3
+- python=3.5.4=h72f0b78_15
+- python-dateutil=2.6.1=py35h90d5b31_1
+- pytz=2017.2=py35h9225bff_1
+- readline=7.0=hac23ff0_3
+- scipy=0.19.1=py35ha8f041b_3
+- setuptools=36.5.0=py35ha8c1747_0
+- six=1.10.0=py35h5312c1b_1
+- sqlite=3.20.1=h6d8b0f3_1
+- tk=8.6.7=h5979e9b_1
+- wheel=0.29.0=py35h601ca99_1
+- xz=5.2.3=h2bcbf08_1
+- zlib=1.2.11=hfbfcf68_1
 - pip:
-    sphinxcontrib-bibtex==0.3.5
+  - apipkg==1.4
+  - brent-search==1.0.29
+  - cachetools==2.0.1
+  - dask==0.15.3
+  - execnet==1.4.1
+  - ndarray-listener==1.0.26
+  - numpy-sugar==1.1.2
+  - optimix==1.2.21
+  - pep8==1.7.0
+  - py==1.4.34
+  - pytest==3.2.2
+  - pytest-cache==1.0
+  - pytest-pep8==1.0.6
+  - pytest-sugar==0.9.0
+  - scipy-sugar==1.0.4
+  - sphinx-rtd-theme==0.2.4
+  - termcolor==1.1.0
+  - toolz==0.8.2
+  - tqdm==4.18.0
