less specific env dodcw

--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -4,30 +4,28 @@ channels:
 dependencies:
 - hcephes=0.2.3=1
 - liknorm=1.3.11=0
-- intel-openmp=2018.0.0=h15fc484_7
-- libedit=3.1=heed3624_0
-- libffi=3.2.1=h4deb6c0_3
-- libgcc-ng=7.2.0=hcbc56d2_1
-- libgfortran-ng=7.2.0=h6fcbd8e_1
-- libstdcxx-ng=7.2.0=h24385c6_1
-- mkl=2018.0.0=hb491cac_4
-- ncurses=6.0=h06874d7_1
-- numpy=1.13.1=py35h8926d81_2
-- openssl=1.0.2l=h9d1a558_3
-- pandas=0.20.3=py35h85c2c75_2
-- pip=9.0.1=py35haa8ec2a_3
-- python=3.5.4=h72f0b78_15
-- python-dateutil=2.6.1=py35h90d5b31_1
-- pytz=2017.2=py35h9225bff_1
-- readline=7.0=hac23ff0_3
-- scipy=0.19.1=py35ha8f041b_3
-- setuptools=36.5.0=py35ha8c1747_0
-- six=1.10.0=py35h5312c1b_1
-- sqlite=3.20.1=h6d8b0f3_1
-- tk=8.6.7=h5979e9b_1
-- wheel=0.29.0=py35h601ca99_1
-- xz=5.2.3=h2bcbf08_1
-- zlib=1.2.11=hfbfcf68_1
+- libedit=3.1
+- libffi=3.2.1
+- libgcc-ng=7.2.0
+- libgfortran-ng=7.2.0
+- libstdcxx-ng=7.2.0
+- mkl=2018.0.0
+- ncurses=6.0
+- numpy=1.13.1
+- pandas=0.20.3
+- pip=9.0.1
+- python=3.5.4
+- python-dateutil=2.6.1
+- pytz=2017.2
+- readline=7.0
+- scipy=0.19.1
+- setuptools=36.5.0
+- six=1.10.0
+- sqlite=3.20.1
+- tk=8.6.7
+- wheel=0.29.0
+- xz=5.2.3
+- zlib=1.2.11
 - pip:
   - apipkg==1.4
   - brent-search==1.0.29
