--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ brent-search>=1.0.29
 cachetools
 liknorm>=1.0.6
 ndarray-listener>=1.0.26
-numpy
+numpy>=1.10
 numpy-sugar>=1.1.2
 optimix>=1.2.21
 scipy
