--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -4,21 +4,21 @@ channels:
 dependencies:
 - hcephes=0.2.3=1
 - liknorm=1.3.11=0
-- libffi=3.2.1
-- numpy=1.13.1
-- pandas=0.20.3
-- pip=9.0.1
-- python=3.5.4
-- python-dateutil=2.6.1
-- pytz=2017.2
-- readline=7.0
-- scipy=0.19.1
-- setuptools=36.5.0
-- six=1.10.0
-- sqlite=3.20.1
-- tk=8.6.7
-- wheel=0.29.0
-- xz=5.2.3
+- libffi
+- numpy
+- pandas
+- pip
+- python=3.5
+- python-dateutil
+- pytz
+- readline
+- scipy
+- setuptools
+- six
+- sqlite
+- tk
+- wheel
+- xz
 - zlib=1.2.11
 - pip:
   - apipkg==1.4
