--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -4,6 +4,7 @@ channels:
 dependencies:
 - hcephes=0.2.3=1
 - liknorm=1.3.11=0
+- liknorm-py=1.0.11
 - libffi
 - numpy
 - pandas
@@ -40,4 +41,3 @@ dependencies:
   - termcolor==1.1.0
   - toolz==0.8.2
   - tqdm==4.18.0
-  - liknorm==1.0.11
