trying to fix scan

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,12 @@ include_package_data = True
 zip_safe = True
 
 [aliases]
-test=pytest
+test = pytest
 
 [tool:pytest]
 addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
 norecursedirs = .eggs .git *.egg-info
 pep8ignore = E402 E501
+
+[yapf]
+based_on_style = pep8
