--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ zip_safe = True
 test = pytest
 
 [tool:pytest]
-addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
+addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst' --cov-report html --cov=glimix_core
 norecursedirs = .eggs .git *.egg-info
 pep8ignore = E402 E501
 
