hsolve, all tests working

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,9 +23,10 @@ zip_safe = True
 test = pytest
 
 [tool:pytest]
-addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst' --cov-report html --cov=glimix_core
+addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
 norecursedirs = .eggs .git *.egg-info
 pep8ignore = E402 E501
+doctest_optionflags = NORMALIZE_WHITESPACE
 
 [yapf]
 based_on_style = pep8
