--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ test = pytest
 
 [tool:pytest]
 addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
-norecursedirs = .eggs .git *.egg-info
+norecursedirs = .eggs .git *.egg-info .ropeproject
 pep8ignore = E402 E501
 doctest_optionflags = NORMALIZE_WHITESPACE
 
