--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,8 @@
 [metadata]
-maintainer = Danilo Horta
-maintainer_email = horta@ebi.ac.uk
-description = Fast inference for Generalised Linear Mixed Models
-description_file = README.rst
 setup_requires = pytest-runner
 url = https://github.com/limix/glimix-core
 license = MIT
-platforms = ['any']
-classifiers =
-    Development Status :: 5 - Production/Stable
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
-    Programming Language :: Python
-keywords =
-    lmm
-    glmm
-    gwas
-include_package_data = True
+keywords = lmm glmm gwas
 zip_safe = True
 
 [aliases]
