--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-brent-search>=1.0.29
+brent-search>=1.0.31
 cachetools>=2.0.1
 liknorm>=1.0.12
-ndarray-listener>=1.0.26
-numpy>=1.13.3
+ndarray-listener>=1.1.0
 numpy-sugar>=1.2.0
+numpy>=1.13.3
 optimix>=1.2.21
-scipy>=1.0.0
+pandas>=0.21.0
+pytest-cov>=2.5.1
+pytest-pep8>=1.0.6
+pytest-runner>=3.0
+pytest>=3.2.3
 scipy-sugar>=1.0.2
+scipy>=1.0.0
 toolz>=0.8.2
 tqdm>=4.19.4
