Preparing for new setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,23 +1,57 @@
 [metadata]
-setup_requires = pytest-runner
-url = https://github.com/limix/glimix-core
+author = Danilo Horta
+author_email = horta@ebi.ac.uk
+classifiers =
+    Development Status :: 5 - Production/Stable
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python
+description = Fast inference over mean and covariance parameters for Generalised Linear Mixed Models
+download_url = https://github.com/limix/glimix-core
+keywords = function, optimisation
 license = MIT
-keywords = lmm glmm gwas
+long_description = file: README.md
+long_description_content_type = text/markdown
+maintainer = Danilo Horta
+platforms = Windows, MacOS, Linux
+maintainer_email = horta@ebi.ac.uk
+name = glimix-core
+url = https://github.com/limix/glimix-core
+version = attr: version.get
+
+[options]
 zip_safe = True
+include_package_data = True
+packages = find:
+setup_requires =
+    pypandoc>=1.4
+    pytest-runner>=3.0
+install_requires =
+    brent-search>=1.0.31
+    cachetools>=2.0.1
+    liknorm>=1.0.12
+    ndarray-listener>=1.1.0
+    numpy-sugar>=1.2.0
+    numpy>=1.14.0
+    optimix>=1.2.22
+    pandas>=0.22.0
+    pytest-pep8>=1.0.6
+    pytest>=3.3.2
+    scipy-sugar>=1.0.4
+    scipy>=1.0.0
+    toolz>=0.9.0
+    tqdm>=4.19.4
 
 [aliases]
 test = pytest
 
 [tool:pytest]
-addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
-norecursedirs = .eggs .git *.egg-info .ropeproject
+addopts =
+    -x
+    --pep8
+    --doctest-modules
+    --doctest-glob='*.rst'
+    --ignore="setup.py"
+    --ignore="doc/conf.py"
+norecursedirs = .eggs .git *.egg-info build .ropeproject
 pep8ignore = E402 E501
-doctest_optionflags = NORMALIZE_WHITESPACE
-
-[yapf]
-based_on_style = pep8
-split_penalty_excess_character = 450000
-
-[coverage:run]
-omit =
-    glimix_core/testit.py
