--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,15 @@ cachetools>=2.0.1
 liknorm>=1.0.12
 ndarray-listener>=1.1.0
 numpy-sugar>=1.2.0
-numpy>=1.13.3
-optimix>=1.2.21
-pandas>=0.21.0
-pytest-cov>=2.5.1
+numpy>=1.14.0
+optimix>=1.2.22
+pandas>=0.22.0
 pytest-pep8>=1.0.6
 pytest-runner>=3.0
-pytest>=3.2.3
-scipy-sugar>=1.0.2
+pytest>=3.3.2
+scipy-sugar>=1.0.4
 scipy>=1.0.0
-toolz>=0.8.2
+sphinx_rtd_theme>=0.2.4
+sphinx>=1.6.6
+toolz>=0.9.0
 tqdm>=4.19.4
