--- a/setup.cfg
+++ b/setup.cfg
@@ -53,5 +53,6 @@ addopts =
     --doctest-glob='*.rst'
     --ignore="setup.py"
     --ignore="doc/conf.py"
+doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject
 pep8ignore = E402 E501
