--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-sudo: false
+sudo: required
 python: 3.6
 env:
   - PKG_NAME=glimix_core
@@ -7,7 +7,10 @@ addons:
   apt:
     packages:
       - pandoc
+      - libffi-dev
+      - libffi6
 install:
+- bash <(curl -fsSL https://raw.githubusercontent.com/limix/hcephes/master/install)
 - bash <(curl -fsSL https://raw.githubusercontent.com/limix/liknorm/master/install)
 script:
 - bash <(curl -fsSL https://raw.githubusercontent.com/horta/ci/master/travis.sh)
