--- a/setup.cfg
+++ b/setup.cfg
@@ -55,4 +55,4 @@ addopts =
     --ignore="doc/conf.py"
 doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject
-pep8ignore = E402 E501
+pep8ignore = E402
