--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-scipy
+brent-search
+cachetools
+liknorm
 ncephes
+ndarray-listener
 numpy
 numpy-sugar
-scipy-sugar
 optimix>=1.2.18
-cachetools
+pytest-pep8>=1.0.6
+pytest-runner>=3.0
+pytest>=3.3.2
+scipy
+scipy-sugar
+setuptools>=38.4.0
+sphinx_rtd_theme>=0.2.4
+sphinx>=1.6.6
 tqdm
-liknorm
-ndarray-listener
-brent-search
