--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,9 @@ environment:
     ARCH: x64
 
 install:
-    - powershell -Command "(New-Object Net.WebClient).DownloadFile('https://raw.githubusercontent.com/limix/hcephes/master/install.bat', 'install-hcephes.bat')" && install-hcephes.bat
+    - powershell -Command "(New-Object Net.WebClient).DownloadFile('https://raw.githubusercontent.com/limix/hcephes/master/install.bat', 'install-hcephes.bat')"
+    - powershell -Command "(New-Object Net.WebClient).DownloadFile('https://github.com/limix/hcephes/archive/0.3.1.zip', '0.3.1.zip')"
+    - install-hcephes.bat
     - set PATH=%programfiles%\hcephes\bin;%PATH%
     - set LIBRARY_INC=%programfiles%\hcephes\include;%LIBRARY_INC%
     - set LIBRARY_LIB=%programfiles%\hcephes\lib;%LIBRARY_LIB%
