up-to-dat optimix and ndarray-listener

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ brent-search
 cachetools
 liknorm
 ncephes
-ndarray-listener
+ndarray-listener>=1.1.1
 numpy
 numpy-sugar
-optimix>=1.2.18
+optimix>=1.2.23
 pytest-pep8>=1.0.6
 pytest-runner>=3.0
 pytest>=3.3.2
