--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy-sugar>=1.2.3
 numpy>=1.14.0
 optimix>=1.2.23
 pandas>=0.22.0
+pypandoc>=1.4
 pytest-pep8>=1.0.6
 pytest-runner>=3.0
 pytest>=3.3.2
