--- a/setup.cfg
+++ b/setup.cfg
@@ -55,3 +55,6 @@ addopts =
 doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject
 pep8ignore = E402
+
+[yapf]
+based_on_style = pep8
