--- a/setup.cfg
+++ b/setup.cfg
@@ -24,11 +24,12 @@ zip_safe = True
 include_package_data = True
 packages = find:
 setup_requires =
+    cffi>=1.11.5
     pytest-runner>=4.2
 install_requires =
     brent-search>=1.0.32
     cachetools>=2.1.0
-    liknorm>=1.1.1
+    liknorm>=1.1.2
     ndarray-listener>=1.1.1
     numpy-sugar>=1.2.5
     numpy>=1.14.5
