--- a/setup.cfg
+++ b/setup.cfg
@@ -54,3 +54,6 @@ addopts =
 doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject
 pep8ignore = E402
+
+[flake8]
+ignore = E501 E741 E203
