--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,33 +1,12 @@
 build: off
 clone_depth: 5
+platform: x64
 configuration: Release
 
 environment:
   PKG_NAME: glimix_core
-  matrix:
-    - platform: x64
-      ARCH: x64
-      PYTHON: C:\Python36-x64
-      CIBW_SKIP: cp27-* cp33-* cp34-* cp35-* *-win32
-    - platform: x86
-      ARCH: x86
-      PYTHON: C:\Python36
-      CIBW_SKIP: cp27-* cp33-* cp34-* cp35-* *-win_amd64
-
-install:
-  - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
-  - "%PYTHON%\\python.exe -m pip install cibuildwheel>=0.9.1"
+  PYTHON: "C:\\Python36-x64"
+  ARCH: x64
 
 build_script:
   - powershell -Command "(New-Object Net.WebClient).DownloadFile('https://raw.githubusercontent.com/horta/ci/master/appveyor.bat', 'appveyor.bat')" && appveyor.bat
-  - "%PYTHON%\\python.exe -m cibuildwheel --output-dir wheelhouse"
-  - FOR %%F IN (wheelhouse\*.whl) DO set filename=%%F
-  - "%PYTHON%\\python.exe -m pip install %filename%"
-  - cd ..
-  - "%PYTHON%\\python.exe -c \"import glimix_core; import sys; sys.exit(glimix_core.test())\""
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - if [%APPVEYOR_REPO_TAG%]==[true] (%PYTHON%\python.exe -m pip install twine && %PYTHON%\python.exe -m twine upload --skip-existing wheelhouse/*)
-
-artifacts:
-  - path: "wheelhouse\\*.whl"
-    name: Wheels
