--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,15 @@
 language: python
 python: 3.6
 env:
-  global:
-  - PKG_NAME=glimix_core
-  - CIBW_SKIP="cp27-* cp34-* cp35-*"
-  - CIBW_BEFORE_BUILD_LINUX="./before-build-linux"
-matrix:
-  include:
-    - sudo: required
-      services:
-        - docker
-    - os: osx
-      language: generic
-      before_install:
-        - brew update
-        - brew outdated python || brew upgrade python
-        - brew unlink python && brew link python
-        - export PATH="/usr/local/opt/python/libexec/bin:$PATH"
-        - hash -r
-        - python -m pip install --upgrade pip setuptools wheel
-addons:
-  apt:
-    packages:
-    - libffi-dev
-    - libffi6
-    - cmake
+- PKG_NAME=glimix_core
 script:
-- |
-  if [ "${TRAVIS_OS_NAME}" == "osx" ]; then
-    sudo mkdir -p /usr/local/man
-    sudo chown -R "${USER}:admin" /usr/local/man
-  fi
 - bash <(curl -fsSL https://raw.githubusercontent.com/horta/ci/master/travis.sh)
-- python -m pip install cibuildwheel>=0.9.1
-- cibuildwheel --output-dir wheelhouse
-- |
-  if [ "${TRAVIS_TAG:-}" != "" ]; then
-    python -m pip install twine
-    python -m twine upload --skip-existing wheelhouse/*
-  fi
+notifications:
+  email:
+    recipients:
+    - danilo.horta@gmail.com
+    on_success: never
+    on_failure: always
 deploy:
   provider: pypi
   user: dhorta
@@ -48,3 +19,4 @@ deploy:
     tags: true
     repo: limix/glimix-core
     branch: master
+    python: 3.6
