--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,4 +9,5 @@ environment:
   ARCH: x64
 
 build_script:
+  - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
   - powershell -Command "(New-Object Net.WebClient).DownloadFile('https://raw.githubusercontent.com/horta/ci/master/appveyor.bat', 'appveyor.bat')" && appveyor.bat
