--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy-sugar>=1.2.5
 numpy>=1.14.5
 optimix>=2.0.0
 pandas>=0.23.3
+pytest-doctestplus>=0.1.3
 pytest-runner>=4.2
 pytest>=3.6.3
 scipy-sugar>=1.0.7
