--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     optimix>=2.0.0
     pandas>=0.23.3
     pytest>=3.6.3
+    pytest-doctestplus>=0.1.3
     scipy-sugar>=1.0.7
     scipy>=1.1.0
     tqdm>=4.23.4
@@ -44,14 +45,17 @@ test = pytest
 
 [tool:pytest]
 addopts =
-    -x
     --doctest-modules
     --doctest-glob='*.rst'
     --ignore="setup.py"
     --ignore="doc/conf.py"
+doctest_plus = enabled
 doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject
 pep8ignore = E402
 
 [flake8]
 ignore = E501 E741 E203
+
+[doc8]
+max-line-length = 88
