--- a/setup.cfg
+++ b/setup.cfg
@@ -59,3 +59,6 @@ ignore = E501 E741 E203
 
 [doc8]
 max-line-length = 88
+
+[pylint]
+disable = C0103, C0111, W0221, R0201, W0613, R0902, C0330, R0913, R0914, E1101, R0205
