--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     numpy-sugar>=1.2.5
     numpy>=1.14.3
     optimix>=2.0.0
+    pandas>=0.23.1
     pytest>=3.6.3
     pytest-doctestplus>=0.1.3
     scipy-sugar>=1.0.7
