--- a/setup.cfg
+++ b/setup.cfg
@@ -65,5 +65,7 @@ line_length=88
 [flake8]
 ignore = E501 E741 E203
 
-[doc8]
-max-line-length = 88
+[rstcheck]
+ignore_substitutions = today, version
+ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass
+ignore_messages = Error in "math" directive
