--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ addopts =
     --ignore="doc/conf.py"
 doctest_plus = enabled
 doctest_optionflags = ELLIPSIS
-norecursedirs = .eggs .git *.egg-info build .ropeproject
+norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
 pep8ignore = E402
 
 [tool:isort]
