--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,7 @@ combine_as_imports=True
 line_length=88
 
 [flake8]
-ignore = E501 E741 E203
+ignore = E501 E741 E203 W503
 
 [rstcheck]
 ignore_substitutions = today, version
