--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 notifications:
   email:
     recipients:
-    - danilo.horta@gmail.com
+    - danilo.horta@pm.me
     on_success: never
     on_failure: always
 deploy:
