--- a/setup.cfg
+++ b/setup.cfg
@@ -29,10 +29,10 @@ install_requires =
     brent-search>=1.0.33
     cachetools>=2.1.0
     liknorm>=1.2.1
-    ndarray-listener>=1.1.2
+    ndarray-listener>=2.0.0
     numpy-sugar>=1.4.1
     numpy>=1.14.3
-    optimix>=3.0.0
+    optimix>=3.0.1
     pandas>=0.23.1
     pytest>=3.6.3
     pytest-doctestplus>=0.1.3
@@ -53,7 +53,7 @@ addopts =
 doctest_plus = enabled
 doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
-pep8ignore = E402
+pep8ignore = E402 W0212
 
 [tool:isort]
 multi_line_output=3
@@ -63,7 +63,7 @@ combine_as_imports=True
 line_length=88
 
 [flake8]
-ignore = E501 E741 E203 W503
+ignore = E501 E741 E203 W503 W0212
 
 [rstcheck]
 ignore_substitutions = today, version
