solve, eff0 and eff1, and scale

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ addopts =
 doctest_plus = enabled
 doctest_optionflags = ELLIPSIS
 norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
-pep8ignore = E402 W0212
+pep8ignore = E402 W0212 W0622 R0915
 
 [tool:isort]
 multi_line_output=3
@@ -62,8 +62,11 @@ force_grid_wrap=0
 combine_as_imports=True
 line_length=88
 
+[pylint]
+disable = redefined-builtin,R0915
+
 [flake8]
-ignore = E501 E741 E203 W503 W0212
+ignore = E501 E741 E203 W503 W0212 W0622 R0915
 
 [rstcheck]
 ignore_substitutions = today, version
