--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ addopts =
     --ignore="doc/conf.py"
 doctest_plus = enabled
 doctest_optionflags = ELLIPSIS
+doctest_rst = enabled
 norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
 pep8ignore = E402 W0212 W0622 R0915
 
